Changed: When no config file is present the input for the second player is set to keyboard 2 (revision 547).
Changed: Bigger sprites in menu level preview in 32-pixels version (revision 542).
Changed: F1 and F2 keys don't switch to fullscreen mode in 32-pixels version since the screen resolution is too low and the graphics cannot be seen completely.
Changed: Configuration file stored in XML format ##### STILL IN PROGRESS #####
Changed: Bots "know" which bomb is ignited by another bomb.
Changed: Algorithm for bots choosing the best block to escape / defend theirselves.
Changed: Keyboard 3 to 5 as human input available now. Useful if you don't have joysticks (#2150405). #### Delete config.dat file first, otherwise the new keys aren't preset ####
Bug fix: Input field was empty / executable crashed when joystick isn't present the next game start (#2121904, revision 538, revision 539, revision 546).
Bug fix: Bots are escaping in a certain situation if a player surrounds a bot with bombs.
Bug fix: Sometimes bots were stuck in the "WALK MODE". If they stay in there too often, they exit the "WALK MODE".
Bug fix: A bomb could have been "lifted again" if it already was lifted.
Bug fix: A level could contain too many items (in walls/initial skills of the bomber). That means the sum of maximum items must not exceed 50. (Initial skill items * 5 + Items in Walls <= 50)
Bug fix: Sometimes too many walls were created causing a game crash.


----------------------------


Version 1.3.1

Released on July 27, 2008

New feature: Level files are also read from the %APPDATA%\Bombermaaan\Levels directory (#1847811) when exe is called with --use-appdata-dir.
Changed: Bombermaaan can be called from any directory now - no more DLL not found message (revision 464).
Changed: Log file and configuration file are placed in %APPDATA%\Bombermaaan directory (#1847811, revision 462, revision 463) when exe is called with --use-appdata-dir.


----------------------------


Version 1.3
