@@ -153,6 +153,10 @@ Bombermaaan is using TinyXML from <a href="https://sourceforge.net/projects/tiny
 Bombermaaan is using <a href="http://www.doxygen.org/index.html">Doxygen</a> for <a href="http://bombermaaan.sourceforge.net/doxydoc/html/">documentation</a> purposes.
 </p>
 
+<p>
+Bombermaaan is using SimpleIni from <a href="http://code.jellycan.com/simpleini/">http://code.jellycan.com/simpleini/</a>.
+</p>
+
 <h2>Project host</h2>
 
 The Bombermaaan project is hosted on SourceForge.net. 
